# ReCycle

./: .gitignore  LICENSE  README.md  main.py  perform_evaluation.py  propulate_interface.py  pyproject.toml  requirements.txt  setup.cfg
ReCycle/: __init__.py  __main__.py  globals.py  perform_evaluation.py  run.py
ReCycle/data/: __init__.py  data_cleaner.py  dataset.py  dataset_factory.py  embeddings.py  rhp_datasets.py
ReCycle/models/: __init__.py  mlp.py  model.py  model_dictionary.py  model_framework.py  oneshot_transformer.py
ReCycle/models/torch_modules/: mlp.py  model.py  oneshot_transformer.py
ReCycle/specs/: __init__.py  action_specs.py  dataset_specs.py  model_specs.py  spec_factory.py  train_specs.py
ReCycle/utils/: error_metrics.py  quantile_loss.py  run.py  tools.py  visualisation.py
data/: __init__.py  anonymized_dataset.csv  data_cleaner.py  dataset.py  dataset_bib.py  embeddings.py  normalizer.py  pslp_datasets.py  rhp_datasets.py
models/: __init__.py  mlp.py  model.py  model_dictionary.py  model_framework.py  oneshot_transformer.py
specs/: __init__.py  action_specs.py  dataset_specs.py  model_specs.py  spec_factory.py  train_specs.py
tests/: test_integration.py
tests/manual_tests/: dataset_plot.py
utils/: error_metrics.py  quantile_loss.py  tools.py  visualisation.py
