[metadata]
name = ReCycle
version = 0.0.1
description = -
author = Arvid Weyrauch, Robust and Efficient AI
author_email = arvid.weyrauch@kit.edu
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
classifiers =
    Development Status :: 4 = Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =.

install_requires =
    holidays #>=0.28
    matplotlib #>=3.7.2
    numpy #>=1.25.1
    pandas #>=2.0.3
    pyro-ppl #>=1.8.5
    torch #>=2.0.1


[flake8]
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
max-line-length = 88
extend-ignore = E203, E501
